fix(style): center footer text on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -283,13 +283,13 @@ footer {
         flex-flow: column wrap;
     }
 
-    .left-footer {
+    .left-footer, .right-footer {
         justify-content: center;
+        text-align: center;
     }
 
     .right-footer {
         padding-top: 0;
-        justify-content: center;
     }
 }
 
